kubernetes/system/media/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: media
  labels:
    pod-security.kubernetes.io/enforce: baseline
    homelab.kfir.dev/private-gateway-access: "true"
